# Technical-Support-Backend

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_03_10_2054-2efedb440c94_init_tables_orders_users_departments.py
src/: config.py  enums.py  main.py
src/database/: __init__.py  session.py
src/departments/: department_model.py
src/orders/: order_model.py  order_repository.py  order_router.py  order_schemas.py  order_service.py
src/users/: user_dependencies.py  user_model.py  user_repository.py  user_router.py  user_schemas.py
src/utils/custom_auth/: custom_auth.py
