[tool.uv.workspace]
members = ["packages/other-package"]

[tool.uv.sources]
sesc-auth-sdk = { git = "https://github.com/SESC-IT-Team/Lyceum-Auth-SDK.git" }

[project]
name = "technical-support-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.134.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.40.0",
    "sqlalchemy>=2.0.47",
    "psycopg[binary]>=3.0.0",
    "sesc-auth-sdk>=0.1.1",
]
